Fix lyric background covered lyric

--- a/src/sass/player.sass
+++ b/src/sass/player.sass
@@ -305,6 +305,7 @@
         transition: opacity .1s linear, padding-left .2s ease-in-out, bottom .2s ease-in-out
         margin-left: 0
         .penguin-player__lyric--line
+            position: relative
             overflow: hidden
             white-space: nowrap
             text-overflow: ellipsis
